# pcl-mean-and-covariance

./: .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_mean_and_covariance.cpp  benchmark.sh
src/: mean_and_covariance.hpp
test/: CMakeLists.txt  test_mean_and_covariance.cpp
